<resources>
    <string name="app_name" translatable="false">ScoreKeeper</string>
    <string name="header">Football</string>
    <string name="teamA">Team A</string>
    <string name="teamB">Team B</string>
    <string name="score">Score</string>
    <string name="fault">Faults</string>
    <string name="iniValue" translatable="false">0</string>
    <string name="goalTeamA">Goal Team A!</string>
    <string name="goalTeamB">Goal Team B!</string>
    <string name="faultTeamA">Team A Fault!</string>
    <string name="faultTeamB">Team B Fault!</string>
    <string name="resetGame">reset Game!</string>
</resources>
